third_party/move/move-compiler/tests/move_check/parser/invalid_named_address_declaration.move
// Named addresses do not need to be declared nor can they be declared in Move
// source.
address Addr;
